# lib/db/src/schema/index.ts
@@ -18,3 +18,4 @@
 //   export type Post = typeof postsTable.$inferSelect;
 
 export * from "./contact";
+export * from "./inquiries";
